k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
    name: cats-api-service  # имя сервиса

spec:
    # На какие поды будет работать этот сервис
    selector:
        app: cats-api  # метка, по которой сервис будет определять, на какие поды делать запрос

    ports:
        -   protocol: TCP
            port: 8891  # порт на сервисе
            targetPort: 8081  # порт на поде
