k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: my-ingress

spec:
    rules:
        -   http:
                paths:
                    -   pathType: Prefix
                        backend:
                            service:
                                name: cats-api-service  # на какой сервис отправлять
                                port:
                                    number: 8891
                        #                        path: "/cats-api"
                        path: /
